--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -27,3 +27,6 @@ chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1"
 anyhow = "1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+rand = "0.9.2"
+async-trait = "0.1.89"
+health = "0.2.0"
