--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,7 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tower = "0.5"
+tower-http = { version = "0.5", features = ["cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 sqlx = { version = "0.7", default-features = false, features = [
@@ -30,3 +31,4 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 rand = "0.9.2"
 async-trait = "0.1.89"
 health = "0.2.0"
+http = "1.4.0"
