--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/material": "^5.15.1",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "lucide-react": "^0.561.0",
