--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
+# Environment files
 /backend/.env
+/frontend/.env
+
+# Rust build artifacts
+/backend/target/
+
+# Node.js dependencies and build artifacts
+/frontend/node_modules/
+/frontend/dist/
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
