--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,7 +21,7 @@ sqlx = { version = "0.7", default-features = false, features = [
     "migrate",
     "bigdecimal"
 ] }
-bigdecimal = "0.4"
+bigdecimal = { version = "0.3", features = ["serde"] }
 dotenvy = "0.15"
 uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
