Multi provider support

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,12 @@
 DATABASE_URL=postgres://postgres:postgres@localhost/rustfolio
-PRICE_PROVIDER=alphavantage
-ALPHAVANTAGE_API_KEY=your_api_key_here
+
+# Price Provider Configuration
+# Options:
+#   - "multi" (recommended): Twelve Data for US stocks + Alpha Vantage fallback for Canadian stocks
+#   - "twelvedata": Twelve Data only (800 calls/day, US stocks only in free tier)
+#   - "alphavantage": Alpha Vantage only (25 calls/day, US + some Canadian stocks)
+PRICE_PROVIDER=multi
+
+# API Keys (both are needed for "multi" provider)
+TWELVEDATA_API_KEY=your_twelvedata_api_key_here
+ALPHAVANTAGE_API_KEY=your_alphavantage_api_key_here
