--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "@mui/material": "^5.15.1",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.561.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
