monitoring with Grafana, loki and uptime kuma

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,26 @@ PRICE_PROVIDER=multi
 # API Keys (both are needed for "multi" provider)
 TWELVEDATA_API_KEY=your_twelvedata_api_key_here
 ALPHAVANTAGE_API_KEY=your_alphavantage_api_key_here
+
+# Logging & Monitoring Configuration
+# Start monitoring stack: docker-compose up -d loki grafana uptime-kuma
+# - Grafana (logs): http://localhost:3001
+# - Uptime Kuma (uptime monitoring): http://localhost:4000
+# - Loki (log aggregation): http://localhost:3100
+
+# Set to "true" to enable Grafana Loki logging, "false" for console-only logging
+LOKI_ENABLED=false
+
+# Loki endpoint URL (required if LOKI_ENABLED=true)
+# For Docker Compose setup: http://loki:3100
+# For local development: http://localhost:3100
+LOKI_URL=http://loki:3100
+
+# Service name for log identification in Loki/Grafana
+SERVICE_NAME=rustfolio
+
+# Environment identifier (e.g., development, staging, production)
+ENVIRONMENT=development
+
+# Log level (trace, debug, info, warn, error)
+RUST_LOG=info
