--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,8 @@ tower = "0.5"
 tower-http = { version = "0.5", features = ["cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
+tracing-loki = { version = "0.2", optional = true }
+url = "2.5"
 sqlx = { version = "0.7", default-features = false, features = [
     "runtime-tokio",
     "postgres",
@@ -34,3 +36,7 @@ health = "0.2.0"
 http = "1.4.0"
 csv = "1.3"
 dashmap = "6.0"
+
+[features]
+default = ["loki"]
+loki = ["tracing-loki"]
