--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,7 +21,8 @@ sqlx = { version = "0.7", default-features = false, features = [
     "uuid",
     "chrono",
     "migrate",
-    "bigdecimal"
+    "bigdecimal",
+    "json"
 ] }
 bigdecimal = { version = "0.3", features = ["serde"] }
 dotenvy = "0.15"
