--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -39,6 +39,7 @@ csv = "1.3"
 dashmap = "6.0"
 regex = "1.12.3"
 parking_lot = "0.12"
+tokio-cron-scheduler = "0.10"
 
 [features]
 default = ["loki"]
