--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -40,6 +40,7 @@ dashmap = "6.0"
 regex = "1.12.3"
 parking_lot = "0.12"
 tokio-cron-scheduler = "0.10"
+lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
 
 [features]
 default = ["loki"]
